--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <div class="container-result">
       <div class="result-money">
         <p>Tip Amount<span>/ person</span></p>
-        <h3>$4.27</h3>
+        <h3 class="tip-amount-per-person">$4.27</h3>
       </div>
 
       <div class="result-money">
         <p>Total<span>/ person</span></p>
-        <h3>$32.79</h3>
+        <h3 class="total-per-person">$32.79</h3>
       </div>
       <button class="result-reset">
         Reset
@@ -73,5 +73,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Thiago Farias</a>.
   </div>
+
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
